--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "underscore": "^1.8.3"
   }
 }
