--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "dateformat": "^3.0.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "fs": "0.0.1-security",
     "material-design-icons": "^3.0.1",
     "method-override": "~2.3.6",
     "morgan": "^1.9.0",
