--- a/app.json
+++ b/app.json
@@ -12,7 +12,12 @@
     }
   },
   "addons": [
-
+    {
+      "plan": "heroku-postgresql",
+      "options": {
+        "version": "10.2"
+      }
+    }
   ],
   "buildpacks": [
     {
