--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-authentication",
+  "name": "portale-innovazioni",
   "main": "portale.js",
   "dependencies": {
     "bcrypt-nodejs": "~0.0.3",
@@ -18,6 +18,7 @@
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "pg": "^7.4.1"
   }
 }
