--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portale-innovazioni",
   "main": "portale.js",
-  "start": "portale.js",
+  "start": "node portale.js",
   "dependencies": {
     "bcrypt-nodejs": "~0.0.3",
     "bcryptjs": "^2.4.3",
