--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "scripts": {
     "start": "node portale.js"
   },
+  "bugs": {
+    "url": "https://github.com/nikox96/www/issues",
+    "email": "nikox.96r@gmail.com"
+  },
+  "engines": {
+    "node": ">=8.9.4",
+    "npm": ">=5.6.4"
+  },
   "dependencies": {
     "bcrypt-nodejs": "~0.0.3",
     "bcryptjs": "^2.4.3",
