--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "email": "nikox.96r@gmail.com"
   },
   "engines": {
-    "node": ">=8.9.4",
-    "npm": ">=5.6.4"
+    "node": ">=8.9.0 <=8.9.4",
+    "npm": ">=5.5.1 <=5.6.0"
   },
   "dependencies": {
     "bcrypt-nodejs": "~0.0.3",
