--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "underscore": "^1.8.3",
+    "html-pdf": "^2.2.0",
     "pg": "^7.4.1"
   }
 }
