--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "underscore": "^1.8.3",
     "html-pdf": "^2.2.0",
+    "pg-escape": "^0.2.0",
     "pg": "^7.4.1"
   }
 }
