--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Portale Innovazioni",
   "short_name": "Portale",
   "icons": [{
-    "src": "images/icons/icon-128x128.png",
+      "src": "/img/icon-24x24.svg",
       "sizes": "24x24",
       "type": "image/svg"
     }],
