--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,9 +2,24 @@
   "name": "Portale Innovazioni",
   "short_name": "Portale",
   "icons": [{
-      "src": "/img/icon-24x24.svg",
-      "sizes": "24x24",
-      "type": "image/svg"
+      "src": "/img/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "/img/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }],
   "start_url": "/",
   "display": "standalone",
