--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,22 +2,22 @@
   "name": "Portale Innovazioni",
   "short_name": "Portale",
   "icons": [{
-      "src": "/img/icon-192x192.png",
+      "src": "/img/logo192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/img/icon-144x144.png",
+      "src": "/img/logo144x144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "/img/icon-152x152.png",
+      "src": "/img/logo152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "/img/icon-512x512.png",
+      "src": "/img/logo512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }],
