--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,7 +21,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }],
-  "start_url": "/pwa.htm",
+  "start_url": "https://portaleinnovazioni.herokuapp.com/",
   "display": "standalone",
   "background_color": "#3E4EB8",
   "theme_color": "#2F3BA2"
