--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     "html-pdf": "^2.2.0",
     "pg-escape": "^0.2.0",
     "pg": "^7.4.1",
-    "carbone": "^1.1.0"S
+    "carbone": "^1.1.0"
   }
 }
