--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portale-innovazioni",
   "main": "portale.js",
   "scripts": {
-        "start": "node portale.js"
+    "start": "node portale.js"
   },
   "bugs": {
     "url": "https://github.com/nikox96/www/issues",
@@ -20,7 +20,7 @@
     "cookie-parser": "^1.4.3",
     "dateformat": "^3.0.3",
     "ejs": "^2.5.7",
-    "express": "^4.16.2",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "material-design-icons": "^3.0.1",
@@ -29,9 +29,8 @@
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "underscore": "^1.8.3",
-    "html-pdf": "^2.2.0",
+    "pg": "^7.9.0",
     "pg-escape": "^0.2.0",
-    "pg": "^7.4.1"
+    "underscore": "^1.8.3"
   }
 }
